Fixed right side alignment of header with body on Mac.

--- a/frontend/sass/common.blocks/_main-header.scss
+++ b/frontend/sass/common.blocks/_main-header.scss
@@ -17,8 +17,10 @@ $main-header-btn-font-size: $secondary-font-size;
   display: flex;
   background: #2d2d2f;
   color: $main-header-color;
-  padding: 20px 36px 20px 20px;
+  padding-top: $normal-padding;
+  padding-bottom: $normal-padding;
 }
+
 
 .main-header__img {
   display: inline-block;
